k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-app
  labels:
    app: feedback-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-app
  template:
    metadata:
      labels:
        app: feedback-app
    spec:
      containers:
        - name: feedback-app
          image: ardevopsun/feedback_app:latest
          ports:
            - containerPort: 8080
