k8s-manifests/feedback-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-ui
  template:
    metadata:
      labels:
        app: feedback-ui
    spec:
      containers:
        - name: feedback-ui
          image: ardevopsun/feedback-ui:latest
          ports:
            - containerPort: 80
