k8s-manifests/feedback-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-ui
spec:
  type: LoadBalancer
  selector:
    app: feedback-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
