k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedback-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:831645374461:certificate/0a2b17b5-1b0c-429a-aa6a-cd62ad772a0a
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - host: feedback.pingdevops.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feedback-ui
                port:
                  number: 80
          - path: /feedback
            pathType: Prefix
            backend:
              service:
                name: feedback-service
                port:
                  number: 80
